--- a/train_rnn.ipynb
+++ b/train_rnn.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "import requests\n",
     "import os.path\n",
     "from sklearn import preprocessing\n",
+    "from keras.optimizers import RMSprop\n",
     "\n",
     "pd.set_option('display.max_columns', 500)\n",
     "pd.set_option('display.max_rows', 500)"
@@ -29,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,13 +55,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "data = get_test_data()\n",
     "data = normalize_data(data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-3.37814783e-01, -2.25267417e-05, -7.14610900e-06,\n",
+       "        -3.04541430e-05, -3.16574836e-01, -1.18456275e-01],\n",
+       "       [-3.37814783e-01, -2.25267417e-05, -7.14610900e-06,\n",
+       "        -3.04541430e-05, -3.16574836e-01, -1.18456275e-01],\n",
+       "       [-3.37814783e-01, -2.25267417e-05, -7.14610900e-06,\n",
+       "        -3.04541430e-05, -3.16574836e-01, -1.18456275e-01],\n",
+       "       ...,\n",
+       "       [ 1.18226921e+00, -3.73320798e-01,  1.97613972e+00,\n",
+       "        -2.01228691e-01,  1.37781913e+00,  4.41700749e-01],\n",
+       "       [ 1.18226921e+00, -3.73320798e-01,  1.97613972e+00,\n",
+       "        -2.01228691e-01,  1.37781913e+00,  7.21779261e-01],\n",
+       "       [ 8.02248215e-01, -3.73320798e-01,  1.97613972e+00,\n",
+       "        -2.01228691e-01,  1.37781913e+00,  7.21779261e-01]])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -71,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,8 +149,9 @@
     "        samples = np.zeros((len(rows),\n",
     "                           lookback // step,\n",
     "                           data.shape[-1]))\n",
-    "        targets = np.zeros((len(rows),))\n",
+    "        targets = np.zeros((len(rows), data.shape[-1]))\n",
     "        for j, row in enumerate(rows):\n",
+    "#             import pdb;pdb.set_trace()\n",
     "            indices = range(rows[j] - lookback, rows[j], step)\n",
     "            samples[j] = data[indices]\n",
     "            targets[j] = data[rows[j] + delay][1]\n",
@@ -119,16 +160,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_train_test_val(data):\n",
+    "def get_train_test_val(data, lookback, step):\n",
     "    train_index = int(len(data) * (.5))\n",
     "    test_index = train_index + int(len(data) * (.25))\n",
-    "    \n",
-    "    lookback = 10080\n",
-    "    step = 1\n",
+    "\n",
     "    delay = 1440\n",
     "    \n",
     "    train_gen = generator(data,\n",
@@ -159,22 +198,24 @@
     "    \n",
     "    test_steps = (test_index - (train_index +1) - lookback) // 128\n",
     "    \n",
-    "    return train_gen, test_gen, val_gen"
+    "    return train_gen, test_gen, val_gen, val_steps, test_steps"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "def fake_generator(data):\n",
+    "    yield 68, 70"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Flatten"
@@ -182,15 +223,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_model(float_data):\n",
+    "def get_model(float_data, lookback, step):\n",
     "    model = Sequential()\n",
-    "    model.add(Flatten(input_shape=(lookback // step, float_data.shape[-1])))\n",
-    "    model.add(Dense(32), activation='relu')\n",
-    "    model.add(Dense(len(float_data.shape[-1])))"
+    "    model.add(Flatten(input_shape=(10080, float_data.shape[-1])))\n",
+    "    model.add(Dense(32, activation='relu'))\n",
+    "    model.add(Dense(float_data.shape[-1]))\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model():\n",
+    "    lookback = 10080\n",
+    "    step = 1\n",
+    "    \n",
+    "    float_data = get_test_data()\n",
+    "    normalized_data = normalize_data(float_data)\n",
+    "    train_gen, test_gen, val_gen, val_steps, test_steps = get_train_test_val(normalized_data, lookback, step)\n",
+    "    \n",
+    "    model = get_model(normalized_data, lookback, step)    \n",
+    "    print(model.summary())\n",
+    "    model.compile(optimizer=RMSprop(), loss='mae', metrics=['acc'])\n",
+    "    history = model.fit_generator(train_gen,\n",
+    "                                 steps_per_epoch=500,\n",
+    "                                 epochs=40,\n",
+    "                                 validation_data=val_gen, \n",
+    "                                 validation_steps=val_steps) \n",
+    "    return history"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "flatten_8 (Flatten)          (None, 60480)             0         \n",
+      "_________________________________________________________________\n",
+      "dense_15 (Dense)             (None, 32)                1935392   \n",
+      "_________________________________________________________________\n",
+      "dense_16 (Dense)             (None, 6)                 198       \n",
+      "=================================================================\n",
+      "Total params: 1,935,590\n",
+      "Trainable params: 1,935,590\n",
+      "Non-trainable params: 0\n",
+      "_________________________________________________________________\n",
+      "None\n",
+      "Epoch 1/40\n",
+      "499/500 [============================>.] - ETA: 0s - loss: 0.6694 - acc: 0.0091"
+     ]
+    }
+   ],
+   "source": [
+    "train_model()"
    ]
   },
   {
@@ -198,11 +297,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "def train_model():\n",
-    "    float_data = get_test_data()\n",
-    "    "
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
